--- a/app/views/contents/form/_nested_fields.html.erb
+++ b/app/views/contents/form/_nested_fields.html.erb
@@ -1,54 +1,28 @@
 <ul id="associate-content-translations" class="list-group list-group-flush">
-  <% @content.translations.each do |content_translation| %>
-    <li id="associated-content-translation-<%= content_translation.id %>"
+  <%= f.fields_for :translations, @content.translations.to_a do |t_f| %>
+    <li id="associated-content-translation-<%= t_f.object.id %>"
         class="list-group-item form-control">
-      <%= content_translation.language.humanize %>
-      <span class="btn-group btn-group-sm pull-right">
-      <%= link_to_show_entity content_translation %>
-        <%= link_to content_path(@content.id, sub_action: :deassociate,
-                                 content_translation_id: content_translation.id),
-                    method: :patch,
-                    remote: true,
-                    id: "btn-deassoc-content-translation-#{content_translation.id}",
-                    class: 'btn btn-sm btn-danger',
-                    title: 'Deassociate Content Translation',
-                    data: { toggle: 'tooltip' } do %>
-        <%= icon('minus', class: 'fa-fw') %>
-      <% end %>
-    </span>
-    </li>
-  <% end %>
-  <li id="associate-archive-add" class="list-group-item form-control">
-    <% if @unassociated[:content_translations].count > 0 %>
-      <div class="form-group input-group">
-        <%= text_field nil,
-                       nil,
-                       id: 'assoc-content-translation-input',
-                       class: 'form-control form-control-sm',
-                       type: 'text',
-                       list: 'free-content-translations',
-                       placeholder: 'Search for non-associated Content Translations' %>
-        <%= content_tag :datalist, id: 'free-content-translations' do %>
-          <% @unassociated[:content_translations].each do |content_translation| %>
-            <%= content_tag :option, content_translation.language.humanize,
-                            data: {'content-translation-id': content_translation.id } %>
-          <% end %>
-        <% end %>
-        <div class="input-group-btn">
-          <%= content_tag :a,
-                          icon('search', class: 'fa-fw'),
-                          id: 'btn-show-selected-content-translation-details',
-                          class: 'btn btn-sm btn-outline-info',
-                          role: 'button' %>
-          <%= content_tag :a,
-                          icon('plus', class: 'fa-fw'),
-                          id: 'btn-associate-selected-content-translation',
-                          class: 'btn btn-sm btn-primary',
-                          role: 'button' %>
+      <div class="row form-group">
+        <%= t_f.label :language, class: 'col-md-3 form-control-label' %>
+        <div class="col-md-7">
+          <%= t_f.select :language,
+                         options_for_select(Content::LANGUAGES.map { |e| e.humanize },
+                                            (t_f.object.language ? t_f.object.language.humanize : nil)),
+                         {},
+                         { class: 'form-control' } %>
+        </div>
+        <div class="col-md-2">
+          <div class="btn-group btn-group-sm pull-right">
+            <%= link_to_destroy_entity t_f.object, remote: true %>
+          </div>
         </div>
       </div>
-    <% else %>
-      no unassociated Content Translations
-    <% end %>
-  </li>
+      <div class="row form-group">
+        <%= t_f.label :translation, class: 'col-md-3 form-control-label' %>
+        <div class="col-md-9">
+          <%= t_f.text_area :translation, rows: 5, class: 'form-control' %>
+        </div>
+      </div>
+    </li>
+  <% end %>
 </ul>
