--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -31,3 +31,6 @@
 <div class="modal fade" id="content-modal" tabindex="-1" role="dialog"
      aria-labelledby="content-modal-label" aria-hidden="true">
 </div>
+<div class="modal fade" id="content-translation-modal" tabindex="-1" role="dialog"
+     aria-labelledby="content-translation-modal-label" aria-hidden="true">
+</div>
