--- a/app/views/content_translations/_show.html.erb
+++ b/app/views/content_translations/_show.html.erb
@@ -1,22 +1,19 @@
-<div class="modal-dialog" role="document">
-  <div class="modal-content card">
-    <h4 id="content-translation-modal-label" class="card-header bg-info">
-      <%= model_name_with_icon ContentTranslation, :singular %>
-      <span class="tag tag-default">ID: <%= @content_translation.id %></span>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </h4>
-    <div class="card-block">
-      <div class="container-fluid">
-        <%= render partial: 'content_translations/inner_show', locals: { content_translation: @content_translation, native: true } %>
-      </div>
-    </div>
-    <div class="card-footer bg-info">
-      <button type="button" class="btn btn-sm btn-info pull-right" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-        Close
-      </button>
-    </div>
+<div class="card">
+  <div class="card-header"
+       role="tab"
+       id="heading-translation-<%= content_translation.id %>">
+    <a data-toggle="collapse"
+       data-parent="#content-content-translations-accordion"
+       href="#collapse-translation-<%= content_translation.id %>"
+       aria-expanded="true"
+       aria-controls="collapse-translation-<%= content_translation.id %>">
+      <%= content_translation.language.humanize %>
+    </a>
+  </div>
+  <div id="collapse-translation-<%= content_translation.id %>"
+       class="card-block collapse"
+       role="tabpanel"
+       aria-labelledby="heading-translation-<%= content_translation.id %>">
+    <%= content_translation.translation %>
   </div>
 </div>
