--- a/app/views/contents/_inner_show.html.erb
+++ b/app/views/contents/_inner_show.html.erb
@@ -12,7 +12,7 @@
 </div>
 <div class="row">
   <label class="col-md-3"><strong><%= Content.human_attribute_name :translations %></strong></label>
-  <ul class="col-md-9" id="content-content-translations-accordion" role="tablist" aria-multiselectable="true">
+  <div class="col-md-9" id="content-content-translations-accordion" role="tablist" aria-multiselectable="true">
     <%= render partial: 'content_translations/show', collection: content.translations, as: :content_translation %>
-  </ul>
+  </div>
 </div>
