[assets] reorganize CSS
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/_00_framework_and_overrides.scss
+++ b/app/assets/stylesheets/_00_framework_and_overrides.scss
@@ -3,6 +3,12 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+.btn {
+  i {
+    line-height: inherit !important;
+  }
+}
+
 ol.breadcrumb {
   li {
     @extend .breadcrumb-item;
