--- a/app/assets/stylesheets/_storage.scss
+++ b/app/assets/stylesheets/_storage.scss
@@ -1,9 +1,6 @@
 // Place all the styles related to the storage controller here.
-// They will automatically be included in application.css.
+// They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-//@import 'frameworks/bootstrap';
-
 table#storages {
   .col-storage-title {
     width: 30%;
