--- a/app/assets/stylesheets/_deeds.scss
+++ b/app/assets/stylesheets/_deeds.scss
@@ -1,8 +1,6 @@
 // Place all the styles related to the deeds controller here.
-// They will automatically be included in application.css.
+// They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-@import 'framework_and_overrides';
 
 .table {
   .col-deed-title {
