--- a/app/views/deeds/_deed.html.erb
+++ b/app/views/deeds/_deed.html.erb
@@ -2,25 +2,56 @@
   <div class="col-deed-title">
     <%= deed.title %>
   </div>
-  <div class="col-deed-year"><%= deed.year %></div>
-  <div class="col-deed-month"><%= deed.month %></div>
-  <div class="col-deed-day"><%= deed.day %></div>
-  <div class="col-deed-actions">
+  <div class="col-deed-date">
+    <div class="container-fluid">
+      <div class="col-deed-year"><%= deed.year %></div>
+      <div class="col-deed-month"><%= deed.month %></div>
+      <div class="col-deed-day"><%= deed.day %></div>
+    </div>
+  </div>
+  <!--<div class="col-deed-desc">-->
+    <!--<%= deed.description %>-->
+  <!--</div>-->
+  <div class="col-deed-actions actions">
     <div class="btn-toolbar" role="toolbar">
       <div class="btn-group btn-group-sm" role="group">
-        <a class="btn btn-sm btn-secondary"
-              title="<%= deed.description %>"
-              data-toggle="tooltip">
-          <%= icon('info', class: 'fa-fw') %>
-          Description
-        </a>
-        <%= link_to content_path(deed.content.id),
-                    class: 'btn btn-sm btn-secondary',
-                    title: "show #{Content.model_name.plural.humanize}",
-                    data: { toggle: 'tooltip' },
-                    remote: true do %>
-          <%= icon_for Content %>
-          Content
+        <% if deed.description.empty? %>
+          <a class="btn btn-sm btn-secondary disabled">
+            <%= icon('info', class: 'fa-fw') %>
+          </a>
+        <% else %>
+          <a class="btn btn-sm btn-secondary"
+                title="<%= deed.description %>"
+                data-toggle="tooltip">
+            <%= icon('info', class: 'fa-fw') %>
+          </a>
+        <% end %>
+
+        <% if true %>
+          <a class="btn btn-sm btn-secondary disabled">
+            <%= icon('comment-o', class: 'fa-fw') %>
+          </a>
+        <% else %>
+          <a class="btn btn-sm btn-secondary"
+             title="notes"
+             data-toggle="tooltip">
+            <%= icon('comment-o', class: 'fa-fw') %>
+          </a>
+        <% end %>
+
+        <% if deed.content.nil? %>
+          <%= link_to nil,
+                      class: 'btn btn-sm btn-secondary disabled' do %>
+            <%= icon_for Content %>
+          <% end %>
+        <% else %>
+          <%= link_to content_path(deed.content.id),
+                      class: 'btn btn-sm btn-secondary',
+                      title: "show #{Content.model_name.human}",
+                      data: { toggle: 'tooltip' },
+                      remote: true do %>
+            <%= icon_for Content %>
+          <% end %>
         <% end %>
         <%= link_to nil,#content_path(deed.content),
                     class: 'btn btn-sm btn-secondary',
@@ -38,6 +69,22 @@
           <%= deed.sources.count %>
           <%= icon_for Source %>
         <% end %>
+        <%= link_to nil,#references_path(deed_id: deed.id),
+                    class: 'btn btn-sm btn-secondary',
+                    title: "show linked References",
+                    data: { toggle: 'tooltip' } do %>
+          ?
+          <%= icon('external-link', class: 'fa-fw') %>
+        <% end %>
+        <%= link_to nil,#seals_path(deed_id: deed.id),
+                    class: 'btn btn-sm btn-secondary',
+                    title: "show linked Seals",
+                    data: { toggle: 'tooltip' } do %>
+          ?
+          <%= icon('bookmark-o', class: 'fa-fw') %>
+        <% end %>
+      </div>
+      <div class="btn-group btn-group-sm" role="group">
         <%= link_to nil,#people_path(deed_id: deed.id),
                     class: 'btn btn-sm btn-secondary',
                     title: "show linked #{Person.model_name.plural.humanize}",
@@ -51,6 +98,13 @@
                     data: { toggle: 'tooltip' } do %>
           <%= deed.places.count %>
           <%= icon_for Place %>
+        <% end %>
+        <%= link_to nil,#roles_path(deed_id: deed.id),
+                    class: 'btn btn-sm btn-secondary',
+                    title: "show linked #{Role.model_name.plural.humanize}",
+                    data: { toggle: 'tooltip' } do %>
+          <%= deed.roles.count %>
+          <%= icon_for Role %>
         <% end %>
       </div>
       <div class="btn-group btn-group-sm" role="group">
