--- a/app/views/deeds/form/_own_fields.html.erb
+++ b/app/views/deeds/form/_own_fields.html.erb
@@ -31,3 +31,9 @@
     <%= f.text_area :description, rows: 5, class: 'form-control' %>
   </div>
 </div>
+<div class="row form-group">
+  <%= f.label :notes, class: 'col-md-3 form-control-label' %>
+  <div class="col-md-9">
+    <%= f.text_area :notes, rows: 5, class: 'form-control' %>
+  </div>
+</div>
