[view] use form-modal for Storages#new
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/storages/form/_form_modal.html.erb
+++ b/app/views/storages/form/_form_modal.html.erb
@@ -1,5 +1,5 @@
 <% content_for :form_modal_before do %>
-  <%= form_tag @storage, method: :patch %>
+  <%= form_tag @storage, method: (action_name.to_sym == :edit ? :patch : :post) %>
 <% end %>
 
 <% content_for :form_modal_title do %>
