--- a/app/views/sources/form/_own_fields.html.erb
+++ b/app/views/sources/form/_own_fields.html.erb
@@ -1,18 +1,20 @@
-<div class="row form-group">
-  <%= f.label :title, class: 'col-md-3 form-control-label' %>
-  <div class="col-md-9">
-    <%= f.text_field :title, class: 'form-control' %>
+<%= fields_for @source do |f| %>
+  <div class="row form-group">
+    <%= f.label :title, class: 'col-md-3 form-control-label' %>
+    <div class="col-md-9">
+      <%= f.text_field :title, class: 'form-control' %>
+    </div>
   </div>
-</div>
-<div class="row form-group">
-  <%= f.label :source_type, class: 'col-md-3 form-control-label' %>
-  <div class="col-md-9">
-    <%= f.text_field :source_type, class: 'form-control' %>
+  <div class="row form-group">
+    <%= f.label :source_type, class: 'col-md-3 form-control-label' %>
+    <div class="col-md-9">
+      <%= f.text_field :source_type, class: 'form-control' %>
+    </div>
   </div>
-</div>
-<div class="row form-group">
-  <%= f.label :notes, class: 'col-md-3 form-control-label' %>
-  <div class="col-md-9">
-    <%= f.text_area :notes, rows: 5, class: 'form-control' %>
+  <div class="row form-group">
+    <%= f.label :notes, class: 'col-md-3 form-control-label' %>
+    <div class="col-md-9">
+      <%= f.text_area :notes, rows: 5, class: 'form-control' %>
+    </div>
   </div>
-</div>
+<% end %>
