[view] generic modals for Archives
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/archives/_nested_show.html.erb
+++ b/app/views/archives/_nested_show.html.erb
@@ -7,7 +7,7 @@
        aria-controls="archive-<%= archive.id %>-content"
        aria-expanded="false"
        href="#archive-<%= archive.id %>-content"
-       data-parent="#storage-archives-accordion"
+       data-parent="#archives-accordion"
        data-toggle="collapse">
       <%= icon('search', class: 'fa-fw') %>
     </a>
