[view] further refactoring of views
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/sources/_nested_show.html.erb
+++ b/app/views/sources/_nested_show.html.erb
@@ -16,6 +16,6 @@
        aria-labelledby="source-<%= source.id %>"
        role="tabpanel"
        aria-expanded="false">
-    <%= render partial: 'sources/inner_show', locals: { source: source } %>
+    <%= render partial: 'sources/show/content', locals: { source: source } %>
   </div>
 </li>
