--- a/app/views/storages/_nested_show.html.erb
+++ b/app/views/storages/_nested_show.html.erb
@@ -16,6 +16,6 @@
        aria-labelledby="storage-<%= storage.id %>"
        role="tabpanel"
        aria-expanded="false">
-    <%= render partial: 'storages/inner_show', locals: { storage: storage } %>
+    <%= render partial: 'storages/show/content', locals: { storage: storage } %>
   </div>
 </li>
