--- a/app/views/archives/_nested_show.html.erb
+++ b/app/views/archives/_nested_show.html.erb
@@ -17,6 +17,6 @@
        aria-labelledby="archive-<%= archive.id %>"
        role="tabpanel"
        aria-expanded="false">
-    <%= render partial: 'archives/inner_show', locals: { archive: archive } %>
+    <%= render partial: 'archives/show/content', locals: { archive: archive } %>
   </div>
 </li>
