--- a/app/views/sources/show/_content.html.erb
+++ b/app/views/sources/show/_content.html.erb
@@ -1,1 +1,29 @@
-<%= render partial: 'sources/inner_show', locals: { source: @source, native: true } %>
+<% native ||= false %>
+<% source ||= @source %>
+
+<div class="row">
+  <label class="col-md-3"><strong><%= Source.human_attribute_name :title %></strong></label>
+  <div class="col-md-9">
+    <%= source.title %>
+  </div>
+</div>
+<div class="row">
+  <label class="col-md-3"><strong><%= Source.human_attribute_name :source_type %></strong></label>
+  <div class="col-md-9">
+    <%= source.source_type %>
+  </div>
+</div>
+<div class="row">
+  <label class="col-md-3"><strong><%= Source.human_attribute_name :notes %></strong></label>
+  <div class="col-md-9">
+    <%= source.notes %>
+  </div>
+</div>
+<% if native %>
+  <div class="row">
+    <label class="col-md-3"><strong><%= Source.human_attribute_name :archives %></strong></label>
+    <ul class="col-md-9 list-group list-group-flush" id="archives-accordion" role="tablist" aria-multiselectable="true">
+      <%= render partial: 'archives/nested_show', collection: source.archives, as: :archive %>
+    </ul>
+  </div>
+<% end %>
