--- a/app/views/contents/show/_content.html.erb
+++ b/app/views/contents/show/_content.html.erb
@@ -1,4 +1,5 @@
 <% native ||= false %>
+<% content ||= @content %>
 
 <div class="row">
   <label class="col-md-3"><strong><%= Content.human_attribute_name :language %></strong></label>
