--- a/app/views/contents/_show.html.erb
+++ b/app/views/contents/_show.html.erb
@@ -9,7 +9,7 @@
     </h4>
     <div class="card-block">
       <div class="container-fluid">
-        <%= render partial: 'contents/inner_show', locals: { content: @content, native: true } %>
+        <%= render partial: 'contents/show/content', locals: { content: @content, native: true } %>
       </div>
     </div>
     <div class="card-footer bg-info">
