[view][helper] new helper for form modal title
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/archives/form/_form_modal.html.erb
+++ b/app/views/archives/form/_form_modal.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :form_modal_title do %>
-  <%= render 'archives/form/title' %>
+  <%= form_modal_title Archive %>
 <% end %>
 
 <% content_for :form_modal_content do %>
