--- a/app/views/storages/form/_form_modal.html.erb
+++ b/app/views/storages/form/_form_modal.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :form_modal_title do %>
-  <%= render 'storages/form/title' %>
+  <%= form_modal_title Storage %>
 <% end %>
 
 <% content_for :form_modal_content do %>
