--- a/app/views/sources/form/_form_modal.html.erb
+++ b/app/views/sources/form/_form_modal.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :form_modal_title do %>
-  <%= render 'sources/form/title' %>
+  <%= form_modal_title Source %>
 <% end %>
 
 <% content_for :form_modal_content do %>
