[view] shared partial for form modal submit
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/contents/form/_form_modal.html.erb
+++ b/app/views/contents/form/_form_modal.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <% content_for :form_modal_submit do %>
-  <%= render 'contents/form/submit' %>
+  <%= render partial: 'shared/form/submit', locals: { entity: @content } %>
 <% end %>
 
 <% content_for :form_modal_after do %>
