--- a/app/views/archives/form/_form_modal.html.erb
+++ b/app/views/archives/form/_form_modal.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <% content_for :form_modal_submit do %>
-  <%= render 'archives/form/submit' %>
+  <%= render partial: 'shared/form/submit', locals: { entity: @archive } %>
 <% end %>
 
 <% content_for :form_modal_after do %>
