--- a/app/views/shared/form/_submit.html.erb
+++ b/app/views/shared/form/_submit.html.erb
@@ -1,3 +1,3 @@
-<%= fields_for @source do |f| %>
+<%= fields_for entity do |f| %>
   <%= f.submit class: 'btn btn-sm btn-primary', data: { close: '' } %>
 <% end %>
