--- a/app/views/archives/form/_form_modal.html.erb
+++ b/app/views/archives/form/_form_modal.html.erb
@@ -1,22 +1,6 @@
-<% content_for :form_modal_before do %>
-  <%= form_tag @archive, method: (action_name.to_sym == :edit ? :patch : :post) %>
-<% end %>
-
-<% content_for :form_modal_title do %>
-  <%= form_modal_title Archive %>
-<% end %>
-
 <% content_for :form_modal_content do %>
   <%= render 'archives/form/own_fields' %>
   <div id="nested-fields"></div>
 <% end %>
 
-<% content_for :form_modal_submit do %>
-  <%= render partial: 'shared/form/submit', locals: { entity: @archive } %>
-<% end %>
-
-<% content_for :form_modal_after do %>
-  </form>
-<% end %>
-
-<%= render 'shared/form_modal' %>
+<%= render partial: 'shared/form_modal', locals: { entity: @archive } %>
