[view] minor refactoring of edit.js
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/storages/form/_form_modal.html.erb
+++ b/app/views/storages/form/_form_modal.html.erb
@@ -3,4 +3,4 @@
   <div id="nested-fields"></div>
 <% end %>
 
-<%= render patial: 'shared/form_modal', locals: { entity: @storage } %>
+<%= render partial: 'shared/form_modal', locals: { entity: @storage } %>
