--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -30,18 +30,9 @@
 <% end %>
 
 <div id="archives-table">
-  <table class="table table-hover table-sm" id="archives">
-    <thead>
-    <tr>
-      <th class="col-archive-title"><%= Archive.human_attribute_name :title %></th>
-      <th class="col-archive-abbr"><%= Archive.human_attribute_name :abbr %></th>
-      <th class="col-archive-notes"><%= Archive.human_attribute_name :notes %></th>
-      <th class="col-archive-assoc">Associations</th>
-      <th class="col-archive-actions">Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <%= render partial: 'archive', collection: @archives %>
-    </tbody>
-  </table>
+  <div class="table" id="archives">
+    <div class="table-body container-fluid">
+      <%= render partial: 'archive', collection: @archives %>
+    </div>
+  </div>
 </div>
