--- a/app/assets/stylesheets/_01_table.scss
+++ b/app/assets/stylesheets/_01_table.scss
@@ -1,21 +1,34 @@
 .table {
-  .table-head {
-    @extend .text-xs-center;
-    @extend thead;
-    font-weight: bold;
-  }
-  .table-body {
-    .row {
-      padding-top: ($spacer-y / 2);
-      padding-bottom: ($spacer-y / 2);
+  .entity.row {
+    padding-top: $table-cell-padding;
+    padding-bottom: $table-cell-padding;
 
-      &:nth-of-type(even) {
-        background-color: $table-bg-accent;
-      }
+    &:nth-of-type(even) {
+      background-color: $table-bg-accent;
+    }
 
-      @include hover {
-        background-color: $table-bg-hover;
+    @include hover {
+      background-color: $table-bg-hover;
+    }
+
+    .col-info {
+      @include make-col(12);
+      @extend .p-r-0;
+
+      .col-meta {
+        @include make-col(6);
+        @extend .p-l-0;
+
+        .btn-toolbar {
+          @include pull-right();
+        }
       }
+    }
+
+    .col-description {
+      @include make-col(12);
+      @extend .p-l-3;
+      @extend small;
     }
   }
 }
