--- a/app/assets/stylesheets/_storage.scss
+++ b/app/assets/stylesheets/_storage.scss
@@ -1,14 +1,14 @@
 // Place all the styles related to the storage controller here.
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-table#storages {
-  .col-storage-title {
-    width: 30%;
-  }
-  .col-storage-notes {
-    width: 40%;
-  }
-  .col-storage-actions {
-    width: 20%;
+
+.table {
+  .entity.row {
+    .col-info {
+      .col-storage-title {
+        @include make-col(6);
+        @extend .p-x-0;
+      }
+    }
   }
 }
