--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -13,17 +13,9 @@
 </h1>
 
 <div id="contents-table">
-  <table class="table table-hover table-sm" id="contents">
-    <thead>
-    <tr>
-      <th class="col-content-language"><%= Content.human_attribute_name :language %></th>
-      <th class="col-content-content"><%= Content.human_attribute_name :content %></th>
-      <th class="col-content-assoc">Associations</th>
-      <th class="col-content-actions">Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <%= render partial: 'content', collection: @contents %>
-    </tbody>
-  </table>
+  <div class="table" id="contents">
+    <div class="table-body container-fluid">
+      <%= render partial: 'content', collection: @contents %>
+    </div>
+  </div>
 </div>
