--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -1,15 +1,9 @@
 <h1>
   <%= model_name_with_icon Archive, :plural %>
-  <span class="btn-group">
-    <%= link_to new_archive_path,
-                class: 'btn btn-sm btn-primary',
-                id: 'btn-new-archive',
-                title: 'Add new Archive',
-                data: { toggle: 'tooltip' },
-                remote: true do -%>
-      <%= icon('plus', class: 'fa-fw') %>
-    <% end -%>
-  </span>
+  <%= render partial: 'shared/index/main_action_btn',
+             locals: { path_to_new_entity: new_archive_path,
+                       path_to_refresh: archives_path,
+                       entity_name: Archive.model_name.human } %>
 </h1>
 
 <% if @storage %>
