--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -1,15 +1,9 @@
 <h1>
   <%= model_name_with_icon Source, :plural %>
-  <span class="btn-group">
-    <%= link_to new_source_path,
-                class: 'btn btn-sm btn-primary',
-                id: 'btn-new-source',
-                title: 'Add new Source',
-                data: { toggle: 'tooltip' },
-                remote: true do -%>
-      <%= icon('plus', class: 'fa-fw') %>
-    <% end -%>
-  </span>
+  <%= render partial: 'shared/index/main_action_btn',
+             locals: { path_to_new_entity: new_source_path,
+                       path_to_refresh: sources_path,
+                       entity_name: Source.model_name.human } %>
 </h1>
 
 <% if @archive %>
