--- a/app/views/shared/index/_main_action_btn.html.erb
+++ b/app/views/shared/index/_main_action_btn.html.erb
@@ -1,7 +1,7 @@
 <span class="btn-group">
   <%= link_to path_to_new_entity,
               class: 'btn btn-primary',
-              id: 'btn-new-deed',
+              id: "btn-new-#{entity_name.downcase}",
               title: "Add new #{entity_name}",
               data: { toggle: 'tooltip', 'turbolinks': false },
               remote: true do -%>
