--- a/app/views/contents/form/_form_modal.html.erb
+++ b/app/views/contents/form/_form_modal.html.erb
@@ -1,4 +1,15 @@
 <% content_for :form_modal_content do %>
+  <% if @deed %>
+    <div class="row form-group">
+      <div class="col-md-3">for Deed</div>
+      <div class="col-md-9">
+        <%= render partial: 'deeds/oneline' %>
+        <%= fields_for @content do |f| %>
+          <%= f.text_field :deed_id, hidden: true, value: @deed.id %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
   <%= render 'contents/form/own_fields' %>
   <div id="nested-fields"></div>
 <% end %>
